--- a/project5/styles.css
+++ b/project5/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffeee6;
+    background-color: #fff6f2;
     font-family: "Playfair Display", serif;
     font-style: normal;
     color: #690500;
